examples/test/testpolicy6538.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6538
  namespace: namespace193
spec:
  podSelector:
    matchLabels:
      key46: value37
      key43: value11
      key40: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value26
          key18: value16
      podSelector:
        matchLabels:
          key20: value33
          key26: value16
